# parallelism_lab_5

./: .clang-format  algo.csv  calc.typ  meson.build  Структура ПКС ЛП.drawio  Схема взаємодії.drawio
include/: data.h
src/: data.c  main.c
